# bazel_nullaway_example

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: ci.yml
bazel/rules/: BUILD.bazel  java.bzl
src/main/java/com/example/: BUILD.bazel  Hello.java
src/test/java/com/example/: BUILD.bazel  HelloTest.java
