module(
    name = "bazel_nullaway_example",
    version = "1.0",
)

bazel_dep(name = "rules_java", version = "9.5.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")
bazel_dep(name = "aspect_rules_lint", version = "2.1.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "google-java-format",
    sha256 = "697707af07c7753f29cba415c6a76b7882702ff464f807da98b28069b8751910",
    url = "https://repo1.maven.org/maven2/com/google/googlejavaformat/google-java-format/1.33.0/google-java-format-1.33.0-all-deps.jar",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

NULLAWAY_VERSION = "0.13.1"

ERROR_PRONE_VERSION = "2.46.0"

maven.install(
    artifacts = [
        "com.google.errorprone:error_prone_core:%s" % ERROR_PRONE_VERSION,
        "com.uber.nullaway:nullaway:%s" % NULLAWAY_VERSION,
        "org.jspecify:jspecify:1.0.0",
        "junit:junit:4.13.2",
        "org.assertj:assertj-core:3.27.7",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
