load("@rules_java//java:defs.bzl", "java_plugin")

java_plugin(
    name = "error_prone",
    processor_class = "com.google.errorprone.ErrorProneJavaCompiler",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_errorprone_error_prone_core",
    ],
)

java_plugin(
    name = "nullaway",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_errorprone_error_prone_core",
        "@maven//:com_uber_nullaway_nullaway",
    ],
)
